# CNNRippleDetectorOEPlugin

./: .gitignore  CMAKE_README.txt  CMakeLists.txt  README.md
Source/: DataThreadPlugin.cpp  DataThreadPlugin.h  FileSourcePlugin.cpp  FileSourcePlugin.h  MultiDetector.cpp  MultiDetector.h  MultiDetectorEditor.cpp  MultiDetectorEditor.h  OpenEphysLib.cpp  ProcessorPlugin.cpp  ProcessorPlugin.h  RecordEnginePlugin.cpp  RecordEnginePlugin.h  tf_functions.cpp  tf_functions.hpp
libs/: THIRD_PARTY_TF_C_LICENSES
